src/objects/HRB_Form__c.object
<CustomObject>
    <fields>
        <fullName>Drug_Valid_Table_2012__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c &lt;&gt; X25a_Main_substance__r.DrugCode__c, 
&quot;Reason for referral (Q14) &amp; primary drug (Q25a) should match&quot;, 
IF(AND( NOT( ISBLANK( X24b_Specify_first_drug_used__c )), X24b_Specify_first_drug_used__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q24b&quot;, 
IF( AND( NOT( ISBLANK( X25a_Main_substance__c )), X25a_Main_substance__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q25a&quot;, 
IF( AND( NOT( ISBLANK( X26a_Substance_2__c )), X26a_Substance_2__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q26a&quot;, 
IF( AND( NOT( ISBLANK( X27a_Substance_3__c )), X27a_Substance_3__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q27a&quot;, 
IF( AND( NOT( ISBLANK( X28a_Substance_4__c )), X28a_Substance_4__r.Tableyear2012__c= FALSE), 
&quot;Invalid Drug Q28a&quot;, 
&quot;HRB OK&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Valid Table 2012</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Validation__c</fullName>
        <formula>IF(X14_Main_Reason_for_Referral_Drug__r.Tableyear2012__c = FALSE,&quot;Invalid Drug Q14&quot;, 

IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;HRB OK&quot;, 

IF( AND(OR(X25a_Main_substance__r.drugtype__c = &quot;2&quot;, X26a_Substance_2__r.drugtype__c = &quot;2&quot;, X27a_Substance_3__r.drugtype__c = &quot;2&quot;, X28a_Substance_4__r.drugtype__c = &quot;2&quot;), X24b_Specify_first_drug_used__r.DrugCode__c = &quot;998&quot;) , &quot;Q24b Invalid&quot;, 

IF( AND(OR(X25a_Main_substance__r.drugtype__c = &quot;3&quot;, X26a_Substance_2__r.drugtype__c = &quot;3&quot;, X27a_Substance_3__r.drugtype__c = &quot;3&quot;, X28a_Substance_4__r.drugtype__c = &quot;3&quot;), X24b_Specify_first_drug_used__r.DrugCode__c = &quot;998&quot;) , &quot;Q24b Invalid&quot;, 

IF( AND(OR(X25a_Main_substance__r.drugtype__c = &quot;2&quot;, X26a_Substance_2__r.drugtype__c = &quot;2&quot;, X27a_Substance_3__r.drugtype__c = &quot;2&quot;, X28a_Substance_4__r.drugtype__c = &quot;2&quot;), X24a_Age_first_use_any_drug__c = 88) , &quot;Q24a Invalid&quot;, 

IF( AND(OR(X25a_Main_substance__r.drugtype__c = &quot;3&quot;, X26a_Substance_2__r.drugtype__c = &quot;3&quot;, X27a_Substance_3__r.drugtype__c = &quot;3&quot;, X28a_Substance_4__r.drugtype__c = &quot;3&quot;), X24a_Age_first_use_any_drug__c = 88) , &quot;Q24a Invalid&quot;, 

IF( AND(X24a_Age_first_use_any_drug__c &lt;&gt; 88, NOT(ISBLANK( X25a_Main_substance__c )), X25a_Main_substance__r.drugtype__c &lt;&gt; &quot;1&quot;, X24a_Age_first_use_any_drug__c &gt; X25d_Age_at_1st_use__c ), &quot;Q24a Invalid should be &lt;= Q25d&quot;, 

IF( AND(X24a_Age_first_use_any_drug__c &lt;&gt; 88, NOT(ISBLANK( X26a_Substance_2__c )), X26a_Substance_2__r.drugtype__c &lt;&gt; &quot;1&quot;, X24a_Age_first_use_any_drug__c &gt; X26d_Age_of_1st_use__c ), &quot;Q24a Invalid should be &lt;= Q26d&quot;, 

IF( AND(X24a_Age_first_use_any_drug__c &lt;&gt; 88, NOT(ISBLANK( X27a_Substance_3__c )), X27a_Substance_3__r.drugtype__c &lt;&gt; &quot;1&quot;, X24a_Age_first_use_any_drug__c &gt; X27d_Age_of_1st_use__c ), &quot;Q24a Invalid should be &lt;= Q27d&quot;, 

IF( AND(X24a_Age_first_use_any_drug__c &lt;&gt; 88, NOT(ISBLANK( X28a_Substance_4__c )), X28a_Substance_4__r.drugtype__c &lt;&gt; &quot;1&quot;, X24a_Age_first_use_any_drug__c &gt; X28d_Age_of_1st_use__c ), &quot;Q24a Invalid should be &lt;= Q28d&quot;, 

IF( AND(X24a_Age_first_use_any_drug__c &lt;&gt; 88, X29c_Age_first_injected__c &lt;&gt; 0, X24a_Age_first_use_any_drug__c &gt; X29c_Age_first_injected__c), &quot;Q24a Invalid should be &lt;= Q29c&quot;, 

IF(AND( TEXT(X29b_Ever_injected__c ) = &quot;9. Not Known&quot;, X29c_Age_first_injected__c = 88), &quot;Q29c Invalid&quot;, 

&quot;HRB OK&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExitAfter__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

Case(X38a_Aftercare_provided_by_this_centre__c, 
&quot;1. Yes&quot;,&quot;1&quot;,
&quot;&quot;) )</formula>
        <label>ExitAfter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExitCentre__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

X38b_Name_of_other_site_for_treatment__r.CentreNo__c )</formula>
        <label>ExitCentre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExitCondition__c</fullName>
        <formula>Case(X36_Client_s_Condition_on_discharge__c, 
&quot;1. Stable&quot;,&quot;1&quot;, 
&quot;2. Unstable&quot;,&quot;2&quot;, 
&quot;3. Died&quot;,&quot;3&quot;, 
&quot;4. Other&quot;,&quot;4&quot;,
&quot;&quot;)</formula>
        <label>ExitCondition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExitDate__c</fullName>
        <formula>DATEVALUE(

IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;&quot;, 

TEXT(  X37_Date_of_Final_Discharge__c )))</formula>
        <label>ExitDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIRSTDRUG__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

X24b_Specify_first_drug_used__r.DrugCode__c)</formula>
        <label>FIRSTDRU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRSTDRUID__c</fullName>
        <label>FIRSTDRUID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRSTDRUX__c</fullName>
        <label>FIRSTDRUX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRB_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will be populated automatically when you click the button in the HRB Report</inlineHelpText>
        <label>HRB Report</label>
        <referenceTo>HRB_Report__c</referenceTo>
        <relationshipLabel>HRB Forms</relationshipLabel>
        <relationshipName>HRB_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INJECTED__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

Case(X29b_Ever_injected__c, 
&quot;1. Yes&quot;,&quot;1&quot;, 
&quot;2. No&quot;,&quot;2&quot;, 
&quot;9. Not Known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <label>INJECTED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter12__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;FALSE&quot;, 

IF( ISBLANK(X33b12_Date_Commenced__c) ,&quot;FALSE&quot;,&quot;TRUE&quot;))</formula>
        <label>Inter12</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter13__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;FALSE&quot;, 

IF(ISBLANK( X33b13_Date_Commenced__c ),&quot;FALSE&quot;,&quot;TRUE&quot;))</formula>
        <label>Inter13</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter14__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;FALSE&quot;,

IF( ISBLANK(X33b14_Date_Commenced__c) ,&quot;FALSE&quot;,&quot;TRUE&quot;))</formula>
        <label>Inter14</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterMain__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

CASE( X33a_Main_Intervention__c , 
&quot;1. Brief intervention&quot;,&quot;1&quot;,
&quot;12. Medication free therapy psychosocial therapy other etc&quot;,&quot;12&quot;,
&quot;13. Psychiatric therapy&quot;,&quot;13&quot;,
&quot;14. Individual counselling&quot;,&quot;14&quot;,
&quot;15. Group counselling&quot;,&quot;15&quot;,
&quot;16. Social and/or occupational reintegration&quot;,&quot;16&quot;,
&quot;17. Family Therapy&quot;,&quot;17&quot;,
&quot;18. Brief intervention: individual education/awareness programme&quot;,&quot;18&quot;,
&quot;19. Group education/awareness programme&quot;,&quot;19&quot;,
&quot;20. Aftercare&quot;,&quot;20&quot;,
&quot;21. Complementary therapies&quot;,&quot;21&quot;,
&quot;23. Strengthening family programme&quot;,&quot;23&quot;,
&quot;24. Sent to another site&quot;,&quot;24&quot;,
&quot;&quot;))</formula>
        <label>InterMain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterOutcome__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

Case(X34_Outcome_for_MAIN_treatment__c, 
&quot;1. Treatment completed&quot;,&quot;1&quot;, 
&quot;2. Transferred stable* (including release linking patient to other treatment site or other prison treatment)&quot;,&quot;2&quot;, 
&quot;3. Transferred unstable&quot;,&quot;3&quot;, 
&quot;4. Client did not wish to attend further treatment sessions because he/she considered him/herself to be stable&quot;,&quot;4&quot;, 
&quot;5. Client refused to have further sessions or did not return&quot;,&quot;5&quot;, 
&quot;6. Premature exit from treatment for non-compliance&quot;,&quot;6&quot;,
&quot;7. Released from prison but not linked to other treatment site&quot;,&quot;7&quot;, 
&quot;8. Died&quot;,&quot;8&quot;, 
&quot;9. Sentenced to prison&quot;,&quot;9&quot;, 
&quot;11. General medical transfer or medical issue&quot;,&quot;11&quot;, 
&quot;12. No longer lives in the area&quot;,&quot;12&quot;, 
&quot;13. Mental health transfer&quot;,&quot;13&quot;,
&quot;14. Prison to prison transfer&quot;,&quot;14&quot;,
&quot;10. Other&quot;,&quot;10&quot;,
&quot;&quot;) )</formula>
        <label>InterOutcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Intervention_Valid_II__c</fullName>
        <formula>IF(X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, &quot;HRB OK&quot;,

IF(AND(TEXT( X15b_If_client_referred__c ) = &quot;8. Other (specify)&quot;, ISBLANK( X15b8_Other_specify__c )), &quot;Q15b8 Other specify Incomplete&quot;, 

IF(OR(TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;HRB OK&quot;, 

IF(ISBLANK( TEXT(X33a_Main_Intervention__c )), &quot;Q33a Invalid Main Intervention&quot;, 

IF(AND(ISBLANK(X33b1_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;1. Brief intervention&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b12_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;12. Medication free therapy psychosocial therapy other etc&quot;),&quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b13_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;13. Psychiatric therapy&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b14_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;14. Individual counselling&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b15_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;15. Group counselling&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b16_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;16. Social and/or occupational reintegration&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b17_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;17. Family Therapy&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b18_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;18. Brief intervention: individual education/awareness programme&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b19_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;19. Group education/awareness programme&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b20_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;20. Aftercare&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b21_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;21. Complementary therapies&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b23_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;23. Strengthening family programme&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

&quot;HRB OK&quot; ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Intervention Valid II</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Intervention_Valid__c</fullName>
        <formula>IF(X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, &quot;HRB OK&quot;, 

IF(AND(TEXT( X15b_If_client_referred__c ) = &quot;8. Other (specify)&quot;, ISBLANK( X15b8_Other_specify__c )), &quot;Q15b8 Other specify Incomplete&quot;, 

IF(OR(TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;HRB OK&quot;, 

IF(ISBLANK( TEXT(X33a_Main_Intervention__c )), &quot;Q33a Invalid Main Intervention&quot;, 

IF(AND(ISBLANK(X33b1_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;1. Brief intervention&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b12_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;12. Medication free therapy psychosocial therapy other etc&quot;),&quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b13_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;13. Psychiatric therapy&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b14_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;14. Individual counselling&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b15_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;15. Group counselling&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b16_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;16. Social and/or occupational reintegration&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b17_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;17. Family Therapy&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b18_Date_Commenced__c), TEXT(X33a_Main_Intervention__c ) = &quot;18. Brief intervention: individual education/awareness programme&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b19_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;19. Group education/awareness programme&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK( X33b20_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;20. Aftercare&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b21_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;21. Complementary therapies&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

IF(AND(ISBLANK(X33b23_Date_Commenced__c ), TEXT(X33a_Main_Intervention__c ) = &quot;23. Strengthening family programme&quot;), &quot;Q33a Main Intervention Invalid&quot;, 

&quot;HRB OK&quot; ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Intervention Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonCompliance__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

Case(X35_Reason_for_exit_6_above__c, 
&quot;1. Drug taking&quot;,&quot;1&quot;, 
&quot;2. Violent behaviour&quot;,&quot;2&quot;, 
&quot;3. Illegal activities&quot;,&quot;3&quot;, 
&quot;5. Alcohol taking&quot;,&quot;5&quot;, 
&quot;4. Not observing other rules&quot;,&quot;4&quot;,
&quot;&quot;) )</formula>
        <label>NonCompliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_completed_Treatment_CY__c</fullName>
        <formula>Contact__r.Number_of_completed_Treatments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of completed Treatment CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_completed_Treatment__c</fullName>
        <formula>Contact__r.Number_of_completed_Treatments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of completed Treatment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

&quot;&quot;, 

Case(X17a_Assessment_outcome__c, 
&quot;1. Suitable for treatment&quot;,&quot;1&quot;, 
&quot;2. Unsuitable for treatment&quot;,&quot;2&quot;,
&quot;&quot;))</formula>
        <label>Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMDRUGID__c</fullName>
        <label>PRIMDRUGID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMDRUGX__c</fullName>
        <label>PRIMDRUGX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMDRUG__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

 &quot;&quot;, 

 X25a_Main_substance__r.DrugCode__c )</formula>
        <label>PRIMDRUG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMFREQ__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

Case(X25c_Frequency_of_use_in_last_mth__c, 
&quot;1. Once a week or less&quot;,&quot;1&quot;, 
&quot;2. 2-6 days per week&quot;,&quot;2&quot;, 
&quot;3. Daily&quot;,&quot;3&quot;, 
&quot;4. No use in past month&quot;,&quot;4&quot;, 
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRIMFREQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMRTE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

Case(X25b_Route_of_Admin_Main_sub__c, 
&quot;1. Inject&quot;,&quot;1&quot;, 
&quot;2. Smoke&quot;,&quot;2&quot;, 
&quot;3. Eat/drink&quot;,&quot;3&quot;, 
&quot;4. Sniff/snort/ inhale&quot;,&quot;4&quot;, 
&quot;5. Sublingual&quot;,&quot;5&quot;, 
&quot;6. Rectal&quot;,&quot;6&quot;, 
&quot;7. Topical&quot;,&quot;7&quot;, 
&quot;9. Not Known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRIMRTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QUARTERCP__c</fullName>
        <formula>CASE(TEXT( MONTH(X13_Date_of_Referral__c)), 

&quot;1&quot;, &quot;1&quot;,
&quot;2&quot;, &quot;1&quot;,
&quot;3&quot;, &quot;1&quot;,

&quot;4&quot;, &quot;2&quot;,
&quot;5&quot;, &quot;2&quot;,
&quot;6&quot;, &quot;2&quot;,

&quot;7&quot;, &quot;3&quot;,
&quot;8&quot;, &quot;3&quot;,
&quot;9&quot;, &quot;3&quot;,

&quot;10&quot;, &quot;4&quot;,
&quot;11&quot;, &quot;4&quot;,
&quot;12&quot;, &quot;4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QUARTERCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUARTER__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, QUARTERCP__c ,

CASE(Text( MONTH(X16_Date_of_Assessment__c)) ,
&quot;1&quot;, &quot;1&quot;,
&quot;2&quot;, &quot;1&quot;,
&quot;3&quot;, &quot;1&quot;,

&quot;4&quot;, &quot;2&quot;,
&quot;5&quot;, &quot;2&quot;,
&quot;6&quot;, &quot;2&quot;,

&quot;7&quot;, &quot;3&quot;,
&quot;8&quot;, &quot;3&quot;,
&quot;9&quot;, &quot;3&quot;,

&quot;10&quot;, &quot;4&quot;,
&quot;11&quot;, &quot;4&quot;,
&quot;12&quot;, &quot;4&quot;,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QUARTER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REFERRAL__c</fullName>
        <formula>X13_Date_of_Referral__c</formula>
        <label>REFERRAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <formula>CASE( X14_Main_Reason_for_referral__c ,

&quot;1. Alcohol&quot;, &quot;1&quot;,
&quot;2. Illicit drug&quot;, &quot;2&quot;,
&quot;3. Licit drug&quot;, &quot;3&quot;,
&quot;4&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecYear__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

 YEAR( X13_Date_of_Referral__c ) ,

 YEAR( X16_Date_of_Assessment__c ) )</formula>
        <label>RecYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Valid__c</fullName>
        <description>Returns empty text if the record is valid, otherwise returns text indicating the problem</description>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, &quot;&quot;,

IF(ISBLANK(TEXT( X15_Source_of_referral__c )), &quot;Q15a source of referral Incomplete&quot;, 

IF(AND(TEXT( X15b_If_client_referred__c ) &lt;&gt; &quot;8. Other (specify)&quot;, NOT(ISBLANK( X15b8_Other_specify__c ))), &quot;Q15b8 Other specify not required&quot;,

IF(AND(OR(TEXT( X15_Source_of_referral__c ) = &quot;4. Other drug treatment centre&quot;, TEXT( X15_Source_of_referral__c ) = &quot;5. General practitioner&quot;, TEXT( X15_Source_of_referral__c ) = &quot;6. Acute hospital service excluding A&amp;E&quot;, TEXT( X15_Source_of_referral__c ) = &quot;13. Prison&quot;, TEXT( X15_Source_of_referral__c ) = &quot;15. Mental health liaison nurse at A&amp;E&quot;, TEXT( X15_Source_of_referral__c ) = &quot;17. Mental health facility (including psychiatrist)&quot;), ISBLANK(TEXT(X15b_If_client_referred__c))), &quot;Q15b Incomplete&quot;,

IF(OR(TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

IF(AND(TEXT(X17b_Assessment_criterion_fulfilled__c ) = &quot;3. Pending&quot;, NOT(ISBLANK( X37_Date_of_Final_Discharge__c ))), &quot;Q17 Criterion Fulfilled Incomplete&quot;, 

IF(AND(TEXT(X17b_Assessment_criterion_fulfilled__c ) &lt;&gt; &quot;1.Yes&quot;, NOT(ISBLANK(X17c_Date_assessment_criteria_fulfilled__c ))), &quot;Q17b Criterion Fulfilled Invalid&quot;, 

IF( X21a_Date_This_treatment_started__c &lt; X16_Date_of_Assessment__c , &quot;Q21a Invalid can&apos;t be before Q16 Date of Assessment&quot;, 

IF( AND(OR(TEXT( X22_Ever_previously_treated_re_drug__c ) = &quot;1. Never treated&quot;, TEXT(X22_Ever_previously_treated_alc_drug__c ) = &quot;1. Never treated&quot;), TEXT(X23_Type_of_contact_with_this_centre__c) &lt;&gt; &quot;1. First treatment&quot;), &quot;Q20 Times started this year Invalid&quot;, 

IF(ISBLANK( X24b_Specify_first_drug_used__c ), &quot;Q24 Incomplete&quot;, 

IF(OR(X28f_How_many_drinks_per_occasion__c &gt; 0 &amp;&amp; X28g_Number_of_days_alcohol_consumed__c = 0, 
X28f_How_many_drinks_per_occasion__c = 0 &amp;&amp; X28g_Number_of_days_alcohol_consumed__c &gt; 0), &quot;Q28f-Q28g Invalid&quot;, 

IF(AND(TEXT( X29b_Ever_injected__c) = &quot;2. No&quot;, TEXT(X30_Ever_shared_any_injecting_equipment__c) &lt;&gt; &quot;8. Not applicable&quot;), &quot;Q29a-Q30 Invalid&quot;, 

IF(ISBLANK( TEXT(X33a_Main_Intervention__c )), &quot;Q33a Invalid Main Intervention&quot;, 

IF( AND(X29c_Age_first_injected__c &lt;&gt; 88, X29c_Age_first_injected__c &gt; Age__c ), &quot;Q29c Age first injected Invalid&quot;, 

&quot;&quot;) ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHARED__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

CASE( X30_Ever_shared_any_injecting_equipment__c ,
&quot;1. Yes&quot;,&quot;1&quot;,
&quot;2. No&quot;,&quot;2&quot;,
&quot;8. Not applicable&quot;,&quot;8&quot;,
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <label>SHARED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIFYID__c</fullName>
        <label>SPECIFYID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIFYX__c</fullName>
        <label>SPECIFYX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIFY__c</fullName>
        <formula>if(X14_Main_Reason_for_Referral_Drug__r.DrugCode__c  &lt;&gt; &quot;&quot;,  X14_Main_Reason_for_Referral_Drug__r.DrugCode__c , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPECIFY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;),

&quot;&quot;, 

CASE( X18a_Clients_treatment_status__c,
&quot;1. Offered treatment&quot;, &quot;1&quot;,
&quot;2. Placed on waiting list for opiate substitute&quot;,&quot;2&quot;,
&quot;6. Placed on other drug treatment waiting list&quot;,&quot;6&quot;,
&quot;4. Psychiatric assessment only&quot;,&quot;4&quot;,
&quot;3. Transferred to another site&quot;,&quot;3&quot;,
&quot;&quot;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBDRUGSPECIFY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SUBDRUGSPECIFY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScreenBy__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

Case(X42b_If_screening_ordered_by__c, 
&quot;1. Treatment Provider&quot;,&quot;1&quot;, 
&quot;2. Court&quot;, &quot;2&quot;,
&quot;&quot;) )</formula>
        <label>ScreenBy</label>
        <type>Text</type>
    </fields>
</CustomObject>